<resources>
    <string name="app_name">RaterTune</string>
    <string name="app_subtitle">Оценивай любимые альбомы</string>
    <string name="login_title">Вход</string>
    <string name="register_title">Регистрация</string>
    <string name="email_hint">Почта</string>
    <string name="password_hint">Пароль</string>
    <string name="login_button">Войти</string>
    <string name="register_button">Зарегистрироваться</string>
    <string name="no_account">Нет аккаунта?</string>
    <string name="have_account">Уже есть аккаунт?</string>
    <string name="register_link">Регистрация</string>
    <string name="login_link">Войти</string>
    <string name="error_empty_email">Введите почту</string>
    <string name="error_empty_password">Введите пароль</string>
    <string name="error_short_password">Пароль должен содержать минимум 6 символов</string>
    <string name="registration_success">Регистрация успешна! Пожалуйста, войдите в систему.</string>
    <string name="login_error">Ошибка входа: %1$s</string>
    <string name="register_error">Ошибка регистрации: %1$s</string>
</resources>